Homework_6 done (kinda)

--- a/Style/style.css
+++ b/Style/style.css
@@ -15,40 +15,53 @@ img {
 
 .container {
   width: 100%;
-  max-width: calc(1110px + 2rem);
-  padding-left: 1rem;
-  padding-right: 1rem;
+  max-width: 1100px;
   margin-left: auto;
   margin-right: auto;
 }
 
 html {
   font-size: 16px;
+  color: white;
+  font-weight: 700;
 }
 
-.section-1 {
-  background: lightblue;
+body {
+  background: #c4c4c4;
 }
 
-h1 {
-  text-align: center;
-}
-
-h2 {
-  font-size: 22px;
-}
-
-.class1 {
-  font-size: 14px;
-}
-
-.card {
-  max-width: 300px;
-  min-height: 450px;
+.wrapper {
+  width: 100%;
+  max-width: 1000px;
+  background: #e6e6e6;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 50px;
   display: inline-block;
-  margin: 0.5rem;
-  padding: 0.5rem;
   text-align: center;
-  background-color: lightpink;
-  vertical-align: top;
+}
+
+.square {
+  width: 200px;
+  height: 200px;
+  background: #fc8f8f;
+  float: left;
+  font-size: 30px;
+}
+
+.right {
+  float: right;
+}
+
+.left {
+  float: left;
+}
+
+.square + .square {
+  margin-left: 15px;
+}
+
+.small {
+  width: 100px;
+  height: 100px;
 }
