--- a/css/style.css
+++ b/css/style.css
@@ -13,55 +13,46 @@ img {
   max-width: 100%;
 }
 
-.container {
+/* .container {
   width: 100%;
   max-width: 1100px;
   margin-left: auto;
   margin-right: auto;
-}
+} */
 
 html {
-  font-size: 16px;
+  font-size: 18px;
+  line-height: 1.5rem;
+}
+p {
+  margin: 20px;
+}
+
+img {
+  max-width: 55px;
+}
+
+.red {
+  color: red;
+  background-color: lightslategray;
+}
+
+.black {
+  color: black;
+  background-color: lightslategray;
+}
+
+.blue {
+  color: blue;
+  background-color: lightslategray;
+}
+
+.white {
   color: white;
-  font-weight: 700;
+  background-color: lightslategray;
 }
 
-body {
-  background: #c4c4c4;
-}
-
-.wrapper {
-  width: 100%;
-  max-width: 1000px;
-  background: #e6e6e6;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 50px;
-  display: inline-block;
-  text-align: center;
-}
-
-.square {
-  width: 200px;
-  height: 200px;
-  background: #fc8f8f;
-  float: left;
-  font-size: 30px;
-}
-
-.right {
-  float: right;
-}
-
-.left {
-  float: left;
-}
-
-.square + .square {
-  margin-left: 15px;
-}
-
-.small {
-  width: 100px;
-  height: 100px;
+.yellow {
+  color: yellow;
+  background-color: lightslategray;
 }
