--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@
 a {
   color: inherit;
   text-decoration: none;
+  display: block;
+  padding: 10px 0px;
 }
 
 img {
@@ -23,7 +25,78 @@ img {
 }
 
 html {
-  font-size: 16px;
+  font-size: 24px;
   font-weight: 400;
   font-family: "Roboto", sans-serif;
+  color: black;
+}
+
+.menu > li {
+  display: inline-block;
+  min-width: 200px;
+  text-align: center;
+}
+
+.menu {
+  background: lightseagreen;
+  text-transform: uppercase;
+  border-bottom: solid blueviolet 4px;
+  display: block;
+  position: relative;
+}
+
+li {
+  display: block;
+}
+
+.submenu {
+  position: absolute;
+  top: 100%;
+  background: blueviolet;
+  min-width: 250px;
+}
+
+.submenu li {
+  position: relative;
+}
+
+.submenu .submenu {
+  position: absolute;
+  left: 100%;
+  top: 0%;
+}
+
+.submenu a:hover {
+  background: rgb(128, 11, 236);
+}
+
+.menu > li:hover {
+  background: blueviolet;
+}
+
+a:hover {
+  background: blueviolet;
+}
+
+.menu > li {
+  position: relative;
+}
+
+.submenu {
+  visibility: hidden;
+  position: absolute;
+}
+
+li:hover > .submenu {
+  visibility: visible;
+}
+
+.list {
+  list-style: none;
+}
+
+.expand::after {
+  content: "+";
+  position: absolute;
+  right: 5px;
 }
